fix z-index navbar

--- a/src/navbar.css
+++ b/src/navbar.css
@@ -7,6 +7,7 @@
   height: 7em;
   min-height: 50px;
   color : white;
+  z-index: 20;
 }
 
 .logo img {
@@ -66,7 +67,7 @@
   position: absolute;
   top: 7em;
   width: 100%;
-  
+  z-index: 20;
 
 }
 
